# CPlusPlusThings

./: CMakeLists.txt
basic_content/const/class_const/c++11_example/: main.cpp
basic_content/const/class_const/first_example/: main.cpp
basic_content/func_pointer/: func_pointer.cpp
basic_content/sizeof/: blackclass.cpp  static.cpp
basic_content/static/: static_error_variable.cpp
basic_content/vptr_vtable/: vptr1.cpp
variadic1.dir/Debug/variadic1.tlog/: link.command.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
